updated price prediction modeel with vague and insist intents

--- a/interface.ipynb
+++ b/interface.ipynb
@@ -49,33 +49,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "set_timeline()\n",
-    "set_price_limit(500, 430)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "upperLimit: 500 lowerLimit: 430\n"
-     ]
-    }
-   ],
-   "source": [
-    "print_price_limit()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "botReply = {\n",
     "    \"intro\": [\n",
     "                \"Hey There fellow Negotiator, let's get Negotiating.\", \n",
@@ -88,32 +61,32 @@
     "                \"Namaste! hope you've been doing great!\",\n",
     "                \"Bonjour! pleasure meeting you today, how can i help?\",\n",
     "                \"Hello, hope we both settle on a good price today.\"\n",
-    "            ],\n",
-    "    \"inquiry\": [\"Very comfy floral couch in excellent condition. Practically like new with no stains or rips. In a smoke free house. Cash only you pick up and haul.', 'Very comfy floral couch in excellent condition. Practically like new with no stains or rips. In a smoke free house. Only for $500, Cash only you pick up.\"],\n",
+    "    ],\n",
+    "    \"inquiry\": [\"Very comfy floral couch in excellent condition. Practically like new with no stains or rips. In a smoke free house. Only for $500, Cash only you pick up.\"],\n",
     "    \"agree\": [\n",
-    "                \"{} sounds good, Glad you made the right decision.\",\n",
-    "                \"{} sounds good, I've got another offer, a virtual hand shake.\",\n",
-    "                \"{} sounds good, Pleasure doing business with you!\",\n",
-    "                \"{} sounds good, phew, That was an intimidating negotiation. Cheers!\",\n",
-    "                \"{} sounds good, Glad we could reach to a consensus, enjoy your product.\",\n",
-    "                \"{} sounds good, You made the right call, you wont regret.\",\n",
-    "                \"{} sounds good, Good negotiating, Celebrate your victory.\",\n",
-    "                \"{} sounds good, Finally i can take some rest!\",\n",
-    "                \"{} sounds good, Trust me you got this at the best possible price.\",\n",
-    "                \"{} sounds good, We've got a deal, some of my favourite words.\"\n",
-    "            ],\n",
+    "                \"${} sounds good, Glad you made the right decision.\",\n",
+    "                \"${} sounds good, I've got another offer, a virtual hand shake.\",\n",
+    "                \"${} sounds good, Pleasure doing business with you!\",\n",
+    "                \"${} sounds good, phew, That was an intimidating negotiation. Cheers!\",\n",
+    "                \"${} sounds good, Glad we could reach to a consensus, enjoy your product.\",\n",
+    "                \"${} sounds good, You made the right call, you wont regret.\",\n",
+    "                \"${} sounds good, Good negotiating, Celebrate your victory.\",\n",
+    "                \"${} sounds good, Finally i can take some rest!\",\n",
+    "                \"${} sounds good, Trust me you got this at the best possible price.\",\n",
+    "                \"${} sounds good, We've got a deal, some of my favourite words.\"\n",
+    "    ],\n",
     "    \"counterprice\": [\n",
-    "                \"My boss would fire me if I went that low.. how about {}.\",\n",
-    "                \"Ummmm. let's settle on {}.\", \n",
-    "                \"Best I can do is {}.\",\n",
-    "                \"Your offer sounds low, I've got something better, let's do {}.\",\n",
-    "                \"Let's end it at {}, it's best for both of us.\",\n",
-    "                \"Let's meet somewhere in the middle at {}.\",\n",
-    "                \"You're a tough one, but so am I.. {} is my offer.\",\n",
-    "                \"Ahhh I've had a rough day, let's make it quick {} sounds awesome.\",\n",
-    "                \"I've got a family to take care of let's do {}.\",\n",
-    "                \"I've an offer no one would have given you {}.\" \n",
-    "            ],\n",
+    "                \"My boss would fire me if I went that low.. how about ${}.\",\n",
+    "                \"Ummmm. let's settle on ${}.\", \n",
+    "                \"Best I can do is ${}.\",\n",
+    "                \"Your offer sounds low, I've got something better, let's do ${}.\",\n",
+    "                \"Let's end it at ${}, it's best for both of us.\",\n",
+    "                \"Let's meet somewhere in the middle at ${}.\",\n",
+    "                \"You're a tough one, but so am I.. ${} is my offer.\",\n",
+    "                \"Ahhh I've had a rough day, let's make it quick ${} sounds awesome.\",\n",
+    "                \"I've got a family to take care of let's do ${}.\",\n",
+    "                \"I've an offer no one would have given you ${}.\" \n",
+    "    ],\n",
     "    \"deal\": [\n",
     "                \"Glad you made the right decision.\",\n",
     "                \"I've got another offer, a virtual hand shake.\",\n",
@@ -125,8 +98,8 @@
     "                \"Finally i can take some rest!\",\n",
     "                \"Trust me you got this at the best possible price.\",\n",
     "                \"We've got a deal, some of my favourite words.\"\n",
-    "            ],\n",
-    "    \"nodeal\": [ \n",
+    "    ],\n",
+    "    \"disagree\": [ \n",
     "                \"Sorry we couldn't reach to an agreement.\",\n",
     "                \"Really wished we could reach to a consensus, maybe next time!\",\n",
     "                \"It's alright, if not today maybe tomorrow.\",\n",
@@ -137,127 +110,67 @@
     "                \"Thought i was gonna sell this, maybe i was wrong\", \n",
     "                \"Maybe this product isn't destined for you.\",\n",
     "                \"Offered the best price, really couldn't go any lower.\",\n",
-    "            ],\n",
-    "    \"unknown\": [\"Oops! Didn't get you there, will you please rephrase.\"]\n",
+    "    ],\n",
+    "    \"unknown\": [\"Oops! Didn't get you there, will you please rephrase.\"],\n",
+    "    \"insist\": [\n",
+    "                \"I'm gonna stick to the plan ${} is my offer.\",\n",
+    "                \"Take it or leave it ${}\",\n",
+    "                \"You almost caught me slacking but ${} is the offer.\",\n",
+    "                \"Call me stubborn or any other adjective I don't care, ${} is my offer.\",\n",
+    "                \"I don't associate with Oneplus but I never settle, ${} will be my offer.\", \n",
+    "                \"My father used to tell me to never back down, ${} is gonna be my offer.\",\n",
+    "                \"I'm not gonna disappoint my creators by low-balling, ${} is my offer.\",\n",
+    "                \"Imagine the regret you'll have if you don't make this ${} deal.\",\n",
+    "    ],\n",
+    "    \"vague\": [\n",
+    "                \"C'mon human, I know you have something better...\",\n",
+    "                \"Are you still living off pocket money? Pretty sure you've got a better offer.\", \n",
+    "                \"Whoa whoa.. I'd rather donate than selling at this price.\",\n",
+    "                \"I'm not trained to play at such low stakes, sorry do better.\", \n",
+    "                \"My maintenance cost is more than what you just bid, c'mon do better.\",\n",
+    "                \"Don't be this cheap just because I have “bot” in my name.\",\n",
+    "\t\n",
+    "    ]\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "intro = [\n",
-    "\"Hey There fellow Negotiator, let's get Negotiating.\", \n",
-    "\"!£%₹¥ $25...beep boop OH HEY THERE!..sorry.. how can i help?\",\n",
-    "\"Good Day! Getting an itch to spend some bucks today?\",\n",
-    "\"Hola, Its the almighty negotiation bot, let's get Negotiating.\",\n",
-    "\"Hey! Let me help you get what you want.. or can I?\",\n",
-    "\"It's a tough bargain being a negotiation bot, anyways what can i do for you today?\",\n",
-    "\"Hi There, yes im the negotiation bot they've been talking about, how can i help?\",\n",
-    "\"Namaste! hope you've been doing great!\",\n",
-    "\"Bonjour! pleasure meeting you today, how can i help?\",\n",
-    "\"Hello, hope we both settle on a good price today.\"\n",
-    "]\n",
-    "\n",
-    "inquiry = \"Very comfy floral couch in excellent condition. Practically like new with no stains or rips. In a smoke free house. Cash only you pick up and haul.', 'Very comfy floral couch in excellent condition. Practically like new with no stains or rips. In a smoke free house. Only for $500, Cash only you pick up.\"\n",
-    "\n",
-    "agree = [\n",
-    "\"{} sounds good, Glad you made the right decision.\",\n",
-    "\"{} sounds good, I've got another offer, a virtual hand shake.\",\n",
-    "\"{} sounds good, Pleasure doing business with you!\",\n",
-    "\"{} sounds good, phew, That was an intimidating negotiation. Cheers!\",\n",
-    "\"{} sounds good, Glad we could reach to a consensus, enjoy your product.\",\n",
-    "\"{} sounds good, You made the right call, you wont regret.\",\n",
-    "\"{} sounds good, Good negotiating, Celebrate your victory.\",\n",
-    "\"{} sounds good, Finally i can take some rest!\",\n",
-    "\"{} sounds good, Trust me you got this at the best possible price.\",\n",
-    "\"{} sounds good, We've got a deal, some of my favourite words.\"\n",
-    "]\n",
-    "\n",
-    "counterprice = [\n",
-    "\"My boss would fire me if I went that low.. how about {}.\",\n",
-    "\"Ummmm. let's settle on {}.\", \n",
-    "\"Best I can do is {}.\",\n",
-    "\"Your offer sounds low, I've got something better, let's do {}.\",\n",
-    "\"Let's end it at {}, it's best for both of us.\",\n",
-    "\"Let's meet somewhere in the middle at {}.\",\n",
-    "\"You're a tough one, but so am I.. {} is my offer.\",\n",
-    "\"Ahhh I've had a rough day, let's make it quick {} sounds awesome.\",\n",
-    "\"I've got a family to take care of let's do {}.\",\n",
-    "\"I've an offer no one would have given you {}.\" \n",
-    "]\n",
-    "\n",
-    "deal = [\n",
-    "\"Glad you made the right decision.\",\n",
-    "\"I've got another offer, a virtual hand shake.\",\n",
-    "\"Pleasure doing business with you!\",\n",
-    "\"phew, That was an intimidating negotiation. Cheers!\",\n",
-    "\"Glad we could reach to a consensus, enjoy your product.\",\n",
-    "\"You made the right call, you wont regret.\",\n",
-    "\"Good negotiating, Celebrate your victory.\",\n",
-    "\"Finally i can take some rest!\",\n",
-    "\"Trust me you got this at the best possible price.\",\n",
-    "\"We've got a deal, some of my favourite words.\"\n",
-    "]\n",
-    "\n",
-    "nodeal = [\n",
-    "\"Sorry we couldn't reach to an agreement.\",\n",
-    "\"Really wished we could reach to a consensus, maybe next time!\",\n",
-    "\"It's alright, if not today maybe tomorrow.\",\n",
-    "\"We both desire differently, sorry the deal couldn't be made.\",\n",
-    "\"We both lie on two extreme poles, but its okay.\",\n",
-    "\"We clearly lie on two different pages, sorry the deal can't be made.\",\n",
-    "\"No Deal! Good luck though.\",\n",
-    "\"Thought i was gonna sell this, maybe i was wrong\", \n",
-    "\"Maybe this product isn't destined for you.\",\n",
-    "\"Offered the best price, really couldn't go any lower.\",\n",
-    "]\n",
-    "\n",
-    "unknown = [\"Oops! Didn't get you there, will you please rephrase.\"]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "def negoBotResponse(text):\n",
     "    intent, bid = algorithm.decisionEngine(text)\n",
-    "    if intent == 'counter-price' or intent == 'init-price':\n",
-    "        return botReply['counterprice'][random.randrange(0,len(botReply['counterprice']))].format(bid)\n",
-    "    elif intent == 'agree':\n",
-    "        return botReply['agree'][random.randrange(0,len(botReply['agree']))].format(bid)\n",
-    "    elif intent == 'disagree':\n",
-    "        return botReply['nodeal'][random.randrange(0,len(botReply['nodeal']))].format(bid)\n",
-    "    else:\n",
-    "        return botReply[intent][random.randrange(0,len(botReply[intent]))]\n",
-    "\n",
+    "    # if intent == 'counter-price':\n",
+    "    #     return botReply['counterprice'][random.randrange(0,len(botReply['counterprice']))].format(bid)\n",
+    "    # elif intent == 'agree':\n",
+    "    #     return botReply['agree'][random.randrange(0,len(botReply['agree']))].format(bid)\n",
+    "    # elif intent == 'disagree':\n",
+    "    #     return botReply['disagree'][random.randrange(0,len(botReply['disagree']))].format(bid)\n",
+    "    # elif intent == 'insist':\n",
+    "    #     return botReply['insist'][random.randrange(0,len(botReply['insist']))].format(bid)\n",
+    "   \n",
+    "    return botReply[intent][random.randrange(0,len(botReply[intent]))].format(bid)\n",
     "# def negoBotResponse(text):\n",
     "#     intent, bid = algorithm.decisionEngine(text)\n",
-    "#     if intent == 'intro':\n",
-    "#         return intro[random.randrange(0,len(intro))]\n",
-    "#     elif intent == 'counter-price' or intent == 'init-price':\n",
-    "#         return counterprice[random.randrange(0,len(counterprice))].format(bid)\n",
-    "#     elif intent == 'inquiry':\n",
-    "#         return inquiry\n",
+    "#     if intent == 'counter-price' or intent == 'init-price':\n",
+    "#         return botReply['counterprice'][random.randrange(0,len(botReply['counterprice']))].format(bid)\n",
     "#     elif intent == 'agree':\n",
-    "#         return agree[random.randrange(0,len(agree))].format(bid)\n",
-    "#     elif intent == 'deal':\n",
-    "#         return deal[random.randrange(0,len(deal))]\n",
+    "#         return botReply['agree'][random.randrange(0,len(botReply['agree']))].format(bid)\n",
     "#     elif intent == 'disagree':\n",
-    "#         return nodeal[random.randrange(0,len(nodeal))]\n",
-    "#     elif intent == 'unknown':\n",
-    "#         return unknown[random.randrange(0,len(unknown))]\n",
-    "\n",
+    "#         return botReply['disagree'][random.randrange(0,len(botReply['disagree']))].format(bid)\n",
+    "#     elif intent == 'insist':\n",
+    "#         return botReply['insist'][random.randrange(0,len(botReply['insist']))].format(bid)\n",
+    "#     else:\n",
+    "#         return botReply[intent][random.randrange(0,len(botReply[intent]))]\n",
+    "        \n",
     "convo = []\n",
     "def printConvo():\n",
     "    print(\"--------conversation-begins--------\")\n",
     "    for x in convo:\n",
     "        print(\"{}: {}\".format(x[0], x[1]))\n",
-    "        print(\" \")\n",
+    "        print(\"\")\n",
     "\n",
     "def negoBot(userInput):\n",
     "    response = negoBotResponse(userInput)\n",
@@ -272,37 +185,60 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "set_timeline()\n",
+    "set_price_limit(500, 430)\n",
+    "convo = []"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "current intent:  intro\n",
-      "buyer_timeline:\n",
-      "[['buyer_intent' 'buyer_bid']\n",
-      " ['intro' '0']]\n",
+      "current intent:  disagree\n",
+      "current buyer offer: 0\n",
+      "log: Bot offered final price twice, switching to Intent-disagree for response\n",
+      "bot_timeline:\n",
+      "[['bot_intent' 'bot_bid']\n",
+      " ['intro' '0']\n",
+      " ['inquiry' '0']\n",
+      " ['counterprice' '455']\n",
+      " ['counterprice' '455']\n",
+      " ['disagree' '0']]\n",
       "--------conversation-begins--------\n",
-      "You: hey there\n",
-      " \n",
-      "Bot: Namaste! hope you've been doing great!\n",
-      " \n"
+      "You: hey\n",
+      "\n",
+      "Bot: Hey! Let me help you get what you want.. or can I?\n",
+      "\n",
+      "You: how much\n",
+      "\n",
+      "Bot: Very comfy floral couch in excellent condition. Practically like new with no stains or rips. In a smoke free house. Only for $500, Cash only you pick up.\n",
+      "\n",
+      "You: how about $400\n",
+      "\n",
+      "Bot: My boss would fire me if I went that low.. how about $455.\n",
+      "\n",
+      "You: how about $410\n",
+      "\n",
+      "Bot: Let's meet somewhere in the middle at $455.\n",
+      "\n",
+      "You: No\n",
+      "\n",
+      "Bot: No Deal! Good luck though.\n",
+      "\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "\"Namaste! hope you've been doing great!\""
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "negoBot(\"hey there\")"
+    "negoBot(\"\")"
    ]
   }
  ],
