--- a/pricePrediction/preprocess.ipynb
+++ b/pricePrediction/preprocess.ipynb
@@ -558,7 +558,8 @@
     "    resBid = []\n",
     "    \n",
     "    for i in range(len(agent_turn)):\n",
-    "        if intents[i] not in ['unknown','offer','vague-price']: \n",
+    "        # if intents[i] not in ['unknown','offer','vague-price']: \n",
+    "        if intents[i] not in ['offer','accept','quit','inform','unknown']: \n",
     "            if agent_turn[i] == 0:\n",
     "                if intents[i] == 'intent':\n",
     "                    resIntent.append('intro')\n",
