--- a/sentenceSimilarity.ipynb
+++ b/sentenceSimilarity.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,24 +117,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
-    "input =\"It has Backup camera\".lower()\n",
-    "description =\"Hi, I'm selling my 2014 Toyota Prius. It has only 65k miles. It has Backup camera, Bluetooth, CD, AUX, Keyless Go. There was no engine or transmission damage. Very clean inside, never smoke. Well maintained. Oil change every 5k miles with synthetic Toyota Original Oil. Registered until February 2019. Title on hands. It lost its clean title status due to rear bumper hit. Small scratch on the right side. I'm the second owner and had no any problem with it. The car is great, 50+ MPG. Will run 100k miles more easily. Call me or better text at any time\".lower()\n"
+    "input =\"Falstaff is a comic opera in three acts by the Italian composer Giuseppe Verdi. The Italian-language libretto was adapted by Arrigo Boito from the play The Merry Wives of Windsor and scenes from Henry IV, Part 1 and Part 2 by William Shakespeare. The work premiered on 9 February 1893 at La Scala in Milan. The last of Verdi's twenty-eight operas, the opera's plot revolves around the thwarted, sometimes farcical, efforts of the fat knight Sir John Falstaff to seduce two married women to gain access to their husbands' wealth. This photograph shows the Italian baritone Ambrogio Maestri playing the title role in a 2016 production of Falstaff at the Vienna State Opera.Apollo 5 was the uncrewed first flight of the Apollo Lunar Module (LM), which would later carry astronauts to the lunar surface. The liftoff of the Saturn IB rocket bearing LM-1 (pictured), the first LM, from Cape Kennedy followed long delays, due in part to setbacks in development of the LM at Grumman, the manufacturer. The original rocket was taken down during the delays and replaced with the one atop which the Apollo 1 fire that killed three astronauts had taken place. LM-1 arrived at the Kennedy Space Center in June 1967; the following months were occupied in testing. \".lower()\n",
+    "description =\"Hi, I'm selling my 2014 Toyota Prius. It has only 65k miles. Bluetooth, CD, AUX, Keyless Go. There was no engine or transmission damage. Very clean inside, never smoke. Well maintained. Oil change every 5k miles with synthetic Toyota Original Oil. Registered until February 2019. Title on hands. It lost its clean title status due to rear bumper hit. Small scratch on the right side. I'm the second owner and had no any problem with it. The car is great, 50+ MPG. Will run 100k miles more easily. Call me or better text at any time\".lower()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "similarity:  0.21650635094610968\n"
+      "similarity:  0.058958328829572276\n"
      ]
     }
    ],
