updated pricePrediction model with 5 x multiples

--- a/interface.ipynb
+++ b/interface.ipynb
@@ -196,27 +196,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "current intent:  disagree\n",
-      "current buyer offer: 0\n",
-      "log: Bot offered final price twice, switching to Intent-disagree for response\n",
+      "current intent:  counter-price\n",
+      "current buyer offer: 400\n",
+      "buyer_timeline:\n",
+      "[['buyer_intent' 'buyer_bid']\n",
+      " ['intro' '0']\n",
+      " ['inquiry' '0']\n",
+      " ['counter-price' '400']]\n",
+      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      "price prediction: 425.0 discount% [15]\n",
+      "case3\n",
+      "457.0 400\n",
+      "price after approximation: 457.0\n",
       "bot_timeline:\n",
       "[['bot_intent' 'bot_bid']\n",
       " ['intro' '0']\n",
       " ['inquiry' '0']\n",
-      " ['counterprice' '455']\n",
-      " ['counterprice' '455']\n",
-      " ['disagree' '0']]\n",
+      " ['counter-price' '457']]\n",
       "--------conversation-begins--------\n",
       "You: hey\n",
       "\n",
-      "Bot: Hey! Let me help you get what you want.. or can I?\n",
+      "Bot: Hi There, yes im the negotiation bot they've been talking about, how can i help?\n",
       "\n",
       "You: how much\n",
       "\n",
@@ -224,21 +231,13 @@
       "\n",
       "You: how about $400\n",
       "\n",
-      "Bot: My boss would fire me if I went that low.. how about $455.\n",
-      "\n",
-      "You: how about $410\n",
-      "\n",
-      "Bot: Let's meet somewhere in the middle at $455.\n",
-      "\n",
-      "You: No\n",
-      "\n",
-      "Bot: No Deal! Good luck though.\n",
+      "Bot: Best I can do is $457.\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "negoBot(\"\")"
+    "negoBot(\"how about $400\")"
    ]
   }
  ],
