added pp_model_raw and pp_model_5x

--- a/interface.ipynb
+++ b/interface.ipynb
@@ -4,16 +4,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Using custom data configuration default\n",
-      "Reusing dataset craigslist_bargains (/Users/kabirbatra/.cache/huggingface/datasets/craigslist_bargains/default/1.1.0/9e4e64d13ea36e435a8f56f9305d3c771115909b7fe83269bf7cd8dd40302338)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import algorithm\n",
     "import numpy as np\n",
@@ -196,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -204,26 +195,32 @@
      "output_type": "stream",
      "text": [
       "current intent:  counter-price\n",
-      "current buyer offer: 400\n",
+      "current buyer offer: 430\n",
       "buyer_timeline:\n",
       "[['buyer_intent' 'buyer_bid']\n",
       " ['intro' '0']\n",
       " ['inquiry' '0']\n",
-      " ['counter-price' '400']]\n",
-      "[0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0]\n",
+      " ['counter-price' '400']\n",
+      " ['counter-price' '410']\n",
+      " ['counter-price' '420']\n",
+      " ['counter-price' '430']]\n",
+      "['intro', 'inquiry', 'counter-price', 'counter-price', 'counter-price', 'counter-price']\n",
+      "[1, 6, 4, 4, 4, 4, 0, 0, 0, 0, 0, 0, 0]\n",
       "price prediction: 425.0 discount% [15]\n",
-      "case3\n",
-      "457.0 400\n",
-      "price after approximation: 457.0\n",
+      "case1\n",
+      "log: Equal Offers. Switching to Intent-agree for response\n",
       "bot_timeline:\n",
       "[['bot_intent' 'bot_bid']\n",
       " ['intro' '0']\n",
       " ['inquiry' '0']\n",
-      " ['counter-price' '457']]\n",
+      " ['counter-price' '490']\n",
+      " ['counter-price' '460']\n",
+      " ['counter-price' '455']\n",
+      " ['agree' '430']]\n",
       "--------conversation-begins--------\n",
       "You: hey\n",
       "\n",
-      "Bot: Hi There, yes im the negotiation bot they've been talking about, how can i help?\n",
+      "Bot: Hey There fellow Negotiator, let's get Negotiating.\n",
       "\n",
       "You: how much\n",
       "\n",
@@ -231,13 +228,25 @@
       "\n",
       "You: how about $400\n",
       "\n",
-      "Bot: Best I can do is $457.\n",
+      "Bot: I've an offer no one would have given you $490.\n",
+      "\n",
+      "You: how about $410\n",
+      "\n",
+      "Bot: Let's meet somewhere in the middle at $460.\n",
+      "\n",
+      "You: how about $420\n",
+      "\n",
+      "Bot: Let's meet somewhere in the middle at $455.\n",
+      "\n",
+      "You: how about $430\n",
+      "\n",
+      "Bot: $430 sounds good, Pleasure doing business with you!\n",
       "\n"
      ]
     }
    ],
    "source": [
-    "negoBot(\"how about $400\")"
+    "negoBot(\"how about $430\")"
    ]
   }
  ],
